<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageAccueil">

    <Button
        android:id="@+id/btnBleu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bleu"
        android:text="@string/bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/vert"
        android:text="@string/vert"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnBleu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnRouge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rouge"
        android:text="@string/rouge"
        app:layout_constraintBottom_toTopOf="@+id/btnVert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textCouleur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="557dp"
        android:layout_marginEnd="176dp"
        android:text="@string/couleur_initiale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomAppli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:text="@string/nomApplication"
        app:layout_constraintBottom_toTopOf="@+id/textNomAuteur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNomAuteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="177dp"
        android:text="@string/auteur"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomAppli" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="61dp" />

    <ImageButton
        android:id="@+id/btnLangue"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:adjustViewBounds="true"
        android:contentDescription="@android:string/untitled"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flagfr"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>