<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bbp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gris"
        android:text="@string/bleuPlus"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bbm"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bvp"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/bbm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gris"
        android:text="@string/bleuMoins"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/bbp"
        app:layout_constraintTop_toBottomOf="@+id/bvm"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/bvp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gris"
        android:text="@string/vertPlus"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bbp"
        app:layout_constraintEnd_toStartOf="@+id/bvm"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brp"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/bvm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gris"
        android:text="@string/vertMoins"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bbm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/bvp"
        app:layout_constraintTop_toBottomOf="@+id/brm"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/brp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gris"
        android:text="@string/rougePlus"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bvp"
        app:layout_constraintEnd_toStartOf="@+id/brm"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/brm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gris"
        android:text="@string/rougeMoins"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bvm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/brp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/brvb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FF0000"
        android:text="@string/rouge_bleu_vert"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="237dp" />

</androidx.constraintlayout.widget.ConstraintLayout>